# Individual-Algorithmic-Project

./: CreateTask.md  CreateTaskNew.md  DataStructuresProject.md  InfoDB.md  LICENSE  OrganizeFiles.md  README.md  TPT.md  TestPrep.md  TestPrep2.md  TestPrep3.md  Week0.md  Week1.md  Week2.md  WriteUp.md  _config.yml  factorial.md  fibonacci.md  index.md  main.py  math.md  palindrome.md  pyproject.toml  quiz1.md  quiz2.md  quiz3.md  quiz5.md  study.md
_includes/: DataStructuresProject.html  InfoDBListsLoops.html  dataStructures.html  factorial.html  fibonacci.html  math.html  navigation.html  organize.html  palindrome.html  task.html
python_menu_challenges/: keypad.py  palindrome.py
python_menu_challenges/week_0/: Tree.py  animation.py  keypad.py  matrix.py  swap.py
python_menu_challenges/week_1/: fibonacci.py  infoDB.py
python_menu_challenges/week_2/: factorial.py  math.py  palindrome.py
templates/: infoDB.py  matrix.py  menu.py
