[tool.poetry]
name = "repl_python3_Individual-Algorithmic-Project-8"
version = "0.1.0"
description = ""
authors = ["GennalynBongola <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Starter = "^0.4.2"
algorithm = "^1.2.0"
crud = "^0.1"
Flask = "^2.1.0"
funcy = "^1.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
